# rust_portfolio

./: Dockerfile  README.md
backend_challenge/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  docker-enter.sh  docker-remove.sh
backend_challenge/data/: blotter.json  market_data.json
backend_challenge/src/: app_state.rs  main.rs
backend_challenge/src/handlers/: auth_user.rs  blotter.rs  market_data.rs  market_data_link.rs  mod.rs
backend_challenge/src/models/: market_data.rs  mod.rs  pair.rs  provider.rs  trade.rs
backend_challenge/src/utils/: mod.rs
db_immutable/: .dockerignore  Cargo.toml  README.md
db_immutable/src/: main.rs
db_immutable/src/domain/: http_input.rs  item.rs  mod.rs
db_immutable/src/repository/: item.rs
db_immutable/src/utils/: mod.rs
kafka/: Cargo.toml  README.md  docker-compose.yaml
kafka/src/: main.rs
pg_migration/: Cargo.toml  README.md  docker-compose.yaml
pg_migration/migrations/: 20210830235649_test_1.sql  20210831005406_test_2_second.sql  20210831010623_third_file.sql
pg_migration/src/: main.rs
