[package]
name = "migrations"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "2.33.3" }
tokio = { version = "1.10.1", features = ["full"] }
tokio-postgres = "0.7.2"
